all functions finish without merging the bookmark part